Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-33749

a hyphen in table name can cause galera certification failures

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.11.7
    • 10.5.5
    • Galera
    • None

    Description

      If a table or database name contains a hyphen '-' and the table is referenced by a foreign key constraint, then inserts in the foreign key referencing table will append into the galera replication key set values, which have distorted able or database component.
      As a consequence, any DML operation on the FK referenced table is not detected as conflicting operation with inserts into the FK referencing table, in the galera certification.

      Attachments

        Activity

          People

            monty Michael Widenius
            seppo Seppo Jaakola
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.