MDEV-33749 hyphen in table name can cause galera certification failures

Fix in this commit handles foreign key value appending into write set
so that db and table valus are converted from the filepath format
to tablename format. This is compatible with key values appended from
other part of code base

There is a mtr test galera.galera_table_with_hyphen for regression testing